package com.student.mentalpotion.core.domain.model

data class ActivitySkill(
    val activityId: String,
    val skillId: String,
    val xpAwarded: Int
)