package com.student.mentalpotion.core.domain.model

data class Avatar(
    val id: String,
    val name: String,
    val imageUrl: String,
    val unlockCondition: String
)
