package com.student.mentalpotion.core.domain.model

data class Routine(
    val id: String,
    val topicId: String,
    val title: String,
    val description: String
)
