package com.student.mentalpotion.core.domain.model

data class RoutineActivity(
    val routineId: String,
    val activityId: String
)