package com.student.mentalpotion.core.domain.model

data class Skill(
    val id: String,
    val name: String,
    val description: String
)
