package com.student.mentalpotion.core.domain.model

data class UserRoutine(
    val id: String,
    val userId: String
)